dev: Add api doc for BookableReviewController.
